5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4383/executions/1734_2495.log
== TEST (2019-05-09 18:01:13) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: 4 "))

# Laco de repeticao
while (CONDIÇÃO DO LAÇO):
	# Verifica se valor eh divisivel por 2
	if (CONDIÇÃO DE PARIDADE):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: 5 "))
	
	# Laco de repeticao
while (CONDIÇÃO DO LAÇO):
	# Verifica se valor eh divisivel por 2
	if (CONDIÇÃO DE PARIDADE):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"

		print(mensagem)
-- ERROR:
File "XXXX", line 9
    while (CONDIÇÃO DO LAÇO):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:02:56) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: 4 "))

# Laco de repeticao
while (CONDIÇÃO DO LAÇO):
	# Verifica se valor eh divisivel por 2
	if (CONDIÇÃO DE PARIDADE):
		mensagem = "PAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: 5 "))
	
# Laco de repeticao
while (CONDIÇÃO DO LAÇO):
	# Verifica se valor eh divisivel por 2
	if (CONDIÇÃO DE PARIDADE):
		mensagem = "PAR"
	else:
		mensagem = "IMPAR"

		print(mensagem)
-- ERROR:
File "XXXX", line 9
    while (CONDIÇÃO DO LAÇO):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:03:25) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: 4 "))

# Laco de repeticao
while (CONDIÇÃO DO LAÇO):
	# Verifica se valor eh divisivel por 2
	if (CONDIÇÃO DE PARIDADE):
		mensagem = "PAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: 5 "))
	
# Laco de repeticao
while (CONDIÇÃO DO LAÇO):
	# Verifica se valor eh divisivel por 2
	
	else:
		mensagem = "IMPAR"

		print(mensagem)
-- ERROR:
File "XXXX", line 9
    while (CONDIÇÃO DO LAÇO):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:07:15) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: 4 "))

# Laco de repeticao
while (CONDIÇÃO DO LAÇO): 4/2 == 2
	# Verifica se valor eh divisivel por 2
	if (CONDIÇÃO DE PARIDADE):
		mensagem = "PAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: 5 "))
	
# Laco de repeticao
while (CONDIÇÃO DO LAÇO): 5/2 == 2,5
	# Verifica se valor eh divisivel por 2
	
	else:
		mensagem = "IMPAR"

		print(mensagem)
-- ERROR:
File "XXXX", line 9
    while (CONDIÇÃO DO LAÇO): 4/2 == 2
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:07:22) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: 4 "))

# Laco de repeticao
while (CONDIÇÃO DO LAÇO): 4/2==2
	# Verifica se valor eh divisivel por 2
	if (CONDIÇÃO DE PARIDADE):
		mensagem = "PAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: 5 "))
	
# Laco de repeticao
while (CONDIÇÃO DO LAÇO): 5/2 == 2,5
	# Verifica se valor eh divisivel por 2
	
	else:
		mensagem = "IMPAR"

		print(mensagem)
-- ERROR:
File "XXXX", line 9
    while (CONDIÇÃO DO LAÇO): 4/2==2
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:07:32) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: 4 "))

# Laco de repeticao
while (CONDIÇÃO DO LAÇO): (4/2==2)
	# Verifica se valor eh divisivel por 2
	if (CONDIÇÃO DE PARIDADE):
		mensagem = "PAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: 5 "))
	
# Laco de repeticao
while (CONDIÇÃO DO LAÇO): 5/2 == 2,5
	# Verifica se valor eh divisivel por 2
	
	else:
		mensagem = "IMPAR"

		print(mensagem)
-- ERROR:
File "XXXX", line 9
    while (CONDIÇÃO DO LAÇO): (4/2==2)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:09:08) 
-- CODE:
# Introducao a Programacao de Computadores
# Criado em 15 / 05 / 2015
# @author: IComp / UFAM

# Primeiro input
num = int(input("Digite um numero: 4 "))

# Laco de repeticao
while (CONDIÇÃO DO LAÇO):
	# Verifica se valor eh divisivel por 2
	if (CONDIÇÃO DE PARIDADE):
		mensagem = "PAR"
	
	print(mensagem)
	
	# Inputs seguintes
	num = int(input("Digite um numero: 5 "))
	
# Laco de repeticao
while (CONDIÇÃO DO LAÇO): 5/2 == 2,5
	# Verifica se valor eh divisivel por 2
	
	else:
		mensagem = "IMPAR"

		print(mensagem)
-- ERROR:
File "XXXX", line 9
    while (CONDIÇÃO DO LAÇO):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
